syntax = "proto3";

package tpspb;

import "unreal_common.proto";

option go_package = "channeld.clewcat.com/examples/channeld-ue-tps/tpspb";

message TestRepChannelData {
    unrealpb.GameStateBase gameState = 1;
    map<uint32, unrealpb.ActorState> actorStates = 2;
    map<uint32, unrealpb.PawnState> pawnStates = 3;
    map<uint32, unrealpb.CharacterState> characterStates = 4;
    map<uint32, unrealpb.PlayerState> playerStates = 5;
    map<uint32, unrealpb.ControllerState> controllerStates = 6;
    map<uint32, unrealpb.PlayerControllerState> playerControllerStates = 7;
    map<uint32, unrealpb.ActorComponentState> actorComponentStates = 8;
    map<uint32, unrealpb.SceneComponentState> sceneComponentStates = 9;
}

message GlobalChannelData {
    unrealpb.GameStateBase gameState = 1;
}